--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -272,7 +272,7 @@ GtkTreeView .separator:window-unfocused,
 .spinbutton .button:focus,
 .spinbutton .button:insensitive,
 .spinbutton .button:window-unfocused {
-    background-color: none;
+    background-color: transparent;
     background-image: none;
 }
 
@@ -415,7 +415,7 @@ GtkScale.slider:insensitive:window-unfocused {
     border-style: none;
 
     color: alpha(@theme_base_color, 0.0); /* FIXME */
-    background-color: none;
+    background-color: transparent;
 
     /* background-image in -assets variant */
 }
@@ -546,7 +546,7 @@ GtkComboBox.combobox-entry .button {
 .primary-toolbar .button:window-unfocused,
 .primary-toolbar .button:insensitive:window-unfocused {
     background-image: none;
-    background-color: none;
+    background-color: transparent;
 }
 
 /* Remove borders from primary toolbar buttons*/
@@ -1081,7 +1081,7 @@ GtkLinkButton * {
 
     border-style: none;
     border-image: none;
-    background-color: none;
+    background-color: transparent;
     background-image: none;
 }
 
@@ -1421,12 +1421,12 @@ GtkTreeMenu .menuitem * {
 .menuitem.check:insensitive,
 .menuitem.radio:insensitive {
     background-image: none;
-    background-color: none;
+    background-color: transparent;
 }
 
 .menuitem.check:active,
 .menuitem.radio:active {
-    background-color: none;
+    background-color: transparent;
 }
 
 .menuitem.check:active {
@@ -1620,7 +1620,7 @@ GtkCheckButton:selected:focus {
 .sidebar .radio:focus,
 .sidebar .radio:selected {
     background-image: none;
-    background-color: none;
+    background-color: transparent;
 }
 
 /****************
