--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -10,19 +10,22 @@
 @define-color placeholder_text_color shade(@theme_text_color, 0.4);
 
 @define-color theme_unfocused_base_color shade(@insensitive_bg_color, 1.05);
-@define-color theme_unfocused_text_color @button_border;
-@define-color theme_unfocused_fg_color @button_border;
-@define-color theme_unfocused_bg_color @theme_bg_color; /* FIXME */
-@define-color theme_unfocused_selected_bg_color @theme_selected_bg_color; /* FIXME */
+@define-color theme_unfocused_text_color mix(@theme_unfocused_base_color, @theme_text_color, 0.8);
+@define-color theme_unfocused_fg_color mix(@theme_unfocused_bg_color, @theme_text_color, 0.3);
+@define-color theme_unfocused_bg_color @theme_bg_color;
+@define-color theme_unfocused_selected_bg_color shade (@theme_selected_bg_color, 0.75); /* FIXME */
 @define-color theme_unfocused_selected_fg_color @theme_selected_fg_color; /* FIXME */
 @define-color unfocused_button_background @theme_unfocused_bg_color;
 @define-color unfocused_borders_color @button_border;
+@define-color unfocused_insensitive_borders_color mix(@theme_unfocused_bg_color, @unfocused_borders_color, 0.5);
 @define-color unfocused_insensitive_fg_color mix(@theme_unfocused_bg_color, @theme_unfocused_fg_color, 0.5);
 @define-color unfocused_insensitive_bg_color mix(@theme_unfocused_bg_color, @theme_unfocused_base_color, 0.5);
 @define-color unfocused_toolbar mix(@theme_unfocused_bg_color, @unfocused_borders_color, 0.5);
 
 @define-color menu_bg_color #555753;
 @define-color menu_fg_color @theme_text_color;
+
+@define-color menu_controls_color #aaa8ac;
 
 @define-color menu_combobox_border darker (@theme_selected_bg_color);
 @define-color menu_separator mix (@menu_fg_color, @menu_bg_color, 0.95);
@@ -110,10 +113,10 @@
 @define-color inset_light_color alpha(white, 0.05);
 @define-color inset_dark_color alpha(black, 0.15);
 
-@define-color menu_controls_color #aaa8ac;
-
 @define-color keyboard_focus_border_a alpha (@theme_fg_color, 0.30);
 @define-color keyboard_focus_border_b alpha (@theme_fg_color, 0.10);
+
+@define-color sidebar_bg_color shade (@theme_bg_color, 1.02);
 
 @define-color trough_bg_color_a #30312f;
 @define-color trough_bg_color_b #41433f;
