Widget theme: fixed checks/radios on notebook background on hover.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1497,6 +1497,8 @@ GtkTreeMenu .menuitem * {
     border-style: none;
 }
 
+GtkCheckButton:hover,
+GtkCheckButton:active:hover,
 GtkCheckButton:selected,
 GtkCheckButton:selected:focus {
     background-color: transparent;
