--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -13,14 +13,14 @@
 @define-color theme_unfocused_text_color mix(@theme_unfocused_base_color, @theme_text_color, 0.8);
 @define-color theme_unfocused_fg_color mix(@theme_unfocused_bg_color, @theme_text_color, 0.3);
 @define-color theme_unfocused_bg_color @theme_bg_color;
-@define-color theme_unfocused_selected_bg_color shade (@theme_selected_bg_color, 0.75); /* FIXME */
+@define-color theme_unfocused_selected_bg_color shade (@theme_selected_bg_color, 0.9); /* FIXME */
 @define-color theme_unfocused_selected_fg_color @theme_selected_fg_color; /* FIXME */
 @define-color unfocused_button_background @theme_unfocused_bg_color;
-@define-color unfocused_borders_color @button_border;
-@define-color unfocused_insensitive_borders_color mix(@theme_unfocused_bg_color, @unfocused_borders_color, 0.5);
+@define-color unfocused_borders mix(@theme_unfocused_bg_color, @theme_text_color, 0.15);
+@define-color unfocused_insensitive_borders_color mix(@theme_unfocused_bg_color, @unfocused_borders, 0.5);
 @define-color unfocused_insensitive_fg_color mix(@theme_unfocused_bg_color, @theme_unfocused_fg_color, 0.5);
 @define-color unfocused_insensitive_bg_color mix(@theme_unfocused_bg_color, @theme_unfocused_base_color, 0.5);
-@define-color unfocused_toolbar mix(@theme_unfocused_bg_color, @unfocused_borders_color, 0.5);
+@define-color unfocused_dark_bg mix(@theme_unfocused_bg_color, @borders, 0.5);
 
 @define-color menu_bg_color #555753;
 @define-color menu_fg_color @theme_text_color;
@@ -35,7 +35,7 @@
 
 @define-color button_gradient_color_a shade (@theme_bg_color, 1.15);
 @define-color button_gradient_color_b shade (@theme_bg_color, 0.8);
-@define-color button_border #24282a;
+@define-color borders #24282a;
 
 @define-color button_active_text_shadow black;
 @define-color button_text_shadow black;
@@ -60,7 +60,6 @@
 
 @define-color inactive_frame_color shade (@theme_bg_color, 0.8);
 
-@define-color notebook_border @button_border;
 @define-color notebook_active_tab_border shade (@theme_selected_bg_color, 0.5);
 @define-color notebook_selected_tab_color alpha (@theme_selected_bg_color, 0.75);
 
@@ -75,7 +74,7 @@
 @define-color switch_trough_active_bg_a shade(@theme_selected_bg_color, 0.6);
 @define-color switch_trough_active_bg_b @theme_selected_bg_color;
 
-@define-color highlighted_border @button_border;
+@define-color highlighted_border @borders;
 @define-color internal_element_color #595959;
 @define-color internal_element_prelight #eeeeee;
 @define-color internal_element_insensitive mix(@internal_element_color, @theme_base_color, 0.65);
