--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -29,11 +29,11 @@
 @define-color theme_unfocused_selected_bg_color darker(@theme_selected_bg_color);
 @define-color theme_unfocused_selected_fg_color @theme_selected_fg_color; /* FIXME */
 @define-color unfocused_button_background @theme_unfocused_bg_color;
-@define-color unfocused_borders_color #a7aba7;
-@define-color unfocused_insensitive_borders_color mix(@theme_unfocused_bg_color, @unfocused_borders_color, 0.5);
+@define-color unfocused_borders @borders;
+@define-color unfocused_insensitive_borders_color mix(@theme_unfocused_bg_color, @unfocused_borders, 0.5);
 @define-color unfocused_insensitive_fg_color mix(@theme_unfocused_bg_color, @theme_unfocused_fg_color, 0.5);
 @define-color unfocused_insensitive_bg_color mix(@theme_unfocused_bg_color, @theme_unfocused_base_color, 0.5);
-@define-color unfocused_toolbar mix(@theme_unfocused_bg_color, @unfocused_borders_color, 0.5);
+@define-color unfocused_dark_bg mix(@theme_unfocused_bg_color, @unfocused_borders, 0.5);
 
 @define-color menu_bg_color shade (@theme_bg_color, 1.1);
 @define-color menu_fg_color @theme_fg_color;
@@ -78,7 +78,7 @@
 
 @define-color button_gradient_color_a #f4f6f4;
 @define-color button_gradient_color_b #d7dad7;
-@define-color button_border #a7aba7;
+@define-color borders #a7aba7;
 
 @define-color button_active_gradient_color_a #a2a9a2;
 @define-color button_active_gradient_color_b shade (@button_active_gradient_color_a, 0.83);
@@ -138,7 +138,6 @@
 
 @define-color highlighted_border #8a8f8a;
 
-@define-color notebook_border #a6a6a6;
 @define-color notebook_active_tab_border #1372d3;
 @define-color notebook_selected_tab_color #8dc0f3;
 
@@ -149,9 +148,6 @@
 @define-color toolbar_gradient_step1 #bcbcb4;
 @define-color toolbar_gradient_step2 #d9d9d7;
 @define-color toolbar_gradient_final #e5e5e2;
-
-@define-color theme_unfocused_toolbar_color shade(@theme_unfocused_bg_color, 0.9);
-@define-color theme_unfocused_border_color shade(@theme_unfocused_bg_color, 0.9);
 
 @define-color toolbar_border_top shade (@theme_bg_color, 0.56);
 @define-color toolbar_border_bottom shade (@theme_bg_color, 0.83);
