--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -9,7 +9,7 @@
 
 @define-color placeholder_text_color shade(@theme_text_color, 0.4);
 
-@define-color theme_unfocused_base_color shade(@insensitive_bg_color, 1.05);
+@define-color theme_unfocused_base_color @theme_base_color;
 @define-color theme_unfocused_text_color mix(@theme_unfocused_base_color, @theme_text_color, 0.8);
 @define-color theme_unfocused_fg_color mix(@theme_unfocused_bg_color, @theme_text_color, 0.3);
 @define-color theme_unfocused_bg_color @theme_bg_color;
@@ -18,8 +18,8 @@
 @define-color unfocused_button_background @theme_unfocused_bg_color;
 @define-color unfocused_borders mix(@theme_unfocused_bg_color, @theme_text_color, 0.15);
 @define-color unfocused_insensitive_borders_color mix(@theme_unfocused_bg_color, @unfocused_borders, 0.5);
-@define-color unfocused_insensitive_fg_color mix(@theme_unfocused_bg_color, @theme_unfocused_fg_color, 0.5);
-@define-color unfocused_insensitive_bg_color mix(@theme_unfocused_bg_color, @theme_unfocused_base_color, 0.5);
+@define-color unfocused_insensitive_fg_color mix(@insensitive_fg_color, @insensitive_bg_color, 0.3);
+@define-color unfocused_insensitive_bg_color @insensitive_bg_color;
 @define-color unfocused_dark_bg mix(@theme_unfocused_bg_color, @borders, 0.5);
 
 @define-color menu_bg_color #555753;
